Fix horizontal overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: $font-body;
   color: $color-text;
@@ -11,6 +15,8 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 h1,
